--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Blog, personal introduction, learning schedule, etc.">
   </head>
   <body>
+    <ul>
+　   <li>Home</li>
+    </ul>
     <h1>覺得厲害</h1>
   </body>
 </html>
