--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <ul>
-　   <li>Home</li>
+　   <li>
+      <a herf="https://6987698766.github.io/"></a>
+     </li>
     </ul>
     <h1>覺得厲害</h1>
   </body>
