--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <ul>
 　   <li>
-      <a herf="https://6987698766.github.io/"></a>
+      <a href="https://6987698766.github.io/">Home</a>
      </li>
     </ul>
     <h1>覺得厲害</h1>
