--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a href="https://6987698766.github.io/">Home</a>
      </li>
      <li>
-      <img src="/Users/huangyuting/Downloads/IMG_3104.PNG">
+      <img src="https://github.com/6987698766/6987698766.github.io/blob/gh-pages/IMG_3104.PNG">
        <h4>Huang yu ting</h4>
        <p>a beginner of web developer</p>
      </li>
