--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   </head>
   <body>
     <ul>
-　   <li>
+      <li><a href="https://6987698766.github.io">GitHub</a></li>
+　    <li>
       <a href="https://6987698766.github.io/">Home</a>
-     </li>
-     <li>
-
+      </li>
+      <li>
        <img src="img/head.jpeg">
-
        <h4>Huang yu ting</h4>
        <p>a beginner of web developer!!</p>
-     </li>
+      </li>
     </ul>
     <h1>覺得厲害</h1>
   </body>
