--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="https://6987698766.github.io/">Home</a>
     </li>
     <li>
-      <img src="img/head.jpeg"width='200' height='100' alt='頭貼'>
+      <Img src="img/head.jpeg" width='200px' height='100px' alt='頭貼'>
       <h4>Huang yu ting</h4>
       <p>a beginner of web developer!!</p>
     </li>
