--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <li>
       <a href="https://6987698766.github.io/">Home</a>
     </li>
+  <img src="img/head.jpeg"alt='頭貼'></img>
     <li>
-      <img src="img/head.jpeg" width='200px' height='100px' alt='頭貼'></img>
+      
       <h4>Huang yu ting</h4>
       <p>a beginner of web developer!!</p>
     </li>
