--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <h1><span style="color:red">Hello</span></h1>
   <meta charset="utf-8">
   <title>About me</title>
+  <style type="text/css">
+  .box{
+    position: absolute ;right: 0px;top: 0px;
+    width: 100px;height: 100px;background-color: goldenrod;
+    }
+  </style>
   <meta name="description" content="Blog, personal introduction, learning schedule, etc.">
 </head>
 <body>
+  <div class="box"></div>
   <img src="img/head.jpeg" alt='頭貼' width="700" height="400"></img>
   <h4>Huang yu ting</h4>
   <p>a beginner of web developer!!</p>
